# libdirtrav

./: .gitignore  CMakeLists.txt  Changelog.txt  LICENSE  Makefile  README.md  pkgconfig.pc.in
.github/workflows/: libdirtrav.yml
doc/: Doxyfile
include/: dirtrav.h  dirtrav_version.h  dirtravw.h
src/: dirtrav.c  folderstats.c  rdir.c  test1.c  test2.c  tree.c
test/: test1.c  test2.c  tree.c
